@@ -112,6 +112,10 @@ under the License.
       <groupId>org.apache.hive</groupId>
       <artifactId>hive-metastore</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.python</groupId>
+      <artifactId>jython</artifactId>
+    </dependency>
 
     <!-- test dependencies. sorted lexicographically. -->
     <dependency>
