@@ -25,9 +25,9 @@ import org.apache.log4j.Logger;
 
 import com.facebook.hiveio.common.HiveType;
 import com.facebook.hiveio.input.HiveInputDescription;
+import com.facebook.hiveio.input.parser.Records;
 import com.facebook.hiveio.record.HiveReadableRecord;
 import com.facebook.hiveio.schema.HiveTableSchema;
-import com.google.common.base.Preconditions;
 
 /**
  * A simple HiveToEdge with integer IDs, no edge value, that assumes the Hive
@@ -40,8 +40,8 @@ public class HiveIntNullEdge
 
   @Override public void checkInput(HiveInputDescription inputDesc,
       HiveTableSchema schema) {
-    Preconditions.checkArgument(schema.columnType(0) == HiveType.INT);
-    Preconditions.checkArgument(schema.columnType(1) == HiveType.INT);
+    Records.verifyType(0, HiveType.INT, schema);
+    Records.verifyType(1, HiveType.INT, schema);
   }
 
   @Override public NullWritable getEdgeValue(HiveReadableRecord hiveRecord) {
@@ -50,11 +50,11 @@ public class HiveIntNullEdge
 
   @Override
   public IntWritable getSourceVertexId(HiveReadableRecord hiveRecord) {
-    return HiveParsing.parseIntID(hiveRecord, 0);
+    return HiveParsing.parseIntID(hiveRecord, 0, getReusableSourceVertexId());
   }
 
   @Override
   public IntWritable getTargetVertexId(HiveReadableRecord hiveRecord) {
-    return HiveParsing.parseIntID(hiveRecord, 1);
+    return HiveParsing.parseIntID(hiveRecord, 1, getReusableTargetVertexId());
   }
 }
